<resources>

    <string name="welcome">欢迎使用语音教学系统...!</string>
    <string name="browser">点击打开浏览器</string>
    <string name="app_name">多媒体教室</string>
    <string name="base_activity">base_activity</string>
    <string name="teach_activity">授课</string>
    <string name="group_activity">分组</string>
    <string name="test_activity">测验</string>
    <string name="self_study_activity">自习</string>
    <string name="search">搜索</string>
    <string name="dial">拨打</string>
    <string name="hang">挂断</string>
    <string name="send_demonstrate">请你做示范</string>
    <string name="exam_oral">马上开始口语考试...</string>
    <string name="exam_ready">准备考试,请稍等...</string>
    <string name="receive_demonstrate">请听他人示范</string>
    <string name="receive_teacher_demonstrate">请听老师示范</string>
    <string name="co_talk_teacher">正在与教师通话中</string>
    <string name="receive_talk_teacher">请认真听讲</string>
    <string name="group_title">人组</string>
    <string name="group_order">组号:</string>
    <string name="group_member">组员:</string>
    <string name="teacher">Teacher</string>
    <string name="now_time">00:12:22</string>
    <string name="totle_time">00:15:00</string>
    <string name="normal_model">normal</string>
    <string name="fast_model">fast</string>
    <string name="slow_model">slow</string>
    <string name="loop_model">loop</string>
    <string name="fast_forward">快进</string>
    <string name="rewind">快退</string>
    <string name="stop">停止</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="exam_standard">正在考试中</string>
    <string name="answer_write_label">作文答题区:</string>
    <string name="answer_selected_label">选择答题区:</string>
    <string name="record">录音</string>
    <string name="write_answer_area">写作答题区</string>
    <string name="be_monitored">你正在被监听</string>
    <string name="test">正在上课，请用心听讲!</string>
    <string name="select_answer_area">选择答题区</string>
    <string name="write_answer">填写答案</string>
    <string name="dictation_over">听写结束</string>
    <string name="translate_over">翻译结束</string>
    <string name="test_over">测验结束</string>
    <string name="answer_right">回答正确</string>
    <string name="answer_wrong">回答错误,正确答案是</string>
    <string name="exam_over">考试结束</string>
    <string name="answer">答题：</string>
    <string name="selected_a">A</string>
    <string name="selected_b">B</string>
    <string name="selected_c">C</string>
    <string name="selected_d">D</string>
    <string name="bring_answer">提前交卷</string>
    <string name="simultaneous_translation">同声翻译</string>
    <string name="begin_translation">请你开始翻译</string>
    <string name="receive_translation">翻译来自</string>
    <string name="set_seat">设置座位</string>
    <string name="dictation">听写</string>
    <string name="end_dictation">听写结束</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="download_progress">下载进度为 0</string>
    <string name="download_addr">下载地址</string>
    <string name="select_translator">请选择要收听的翻译人员</string>
    <string name="count">题数:</string>
    <string name="score">总分:</string>
    <string name="time">时间:</string>
    <string name="minutes">分钟</string>
    <string name="media_demand">资料点播</string>
    <string name="record_practice">录音练习</string>
    <string name="electronic_dictionary">网上冲浪</string>
    <string name="ip_call">IP通话</string>
    <string name="user_help">使用帮助</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">测试AudioRecord，实现录音功能</string>
    <string name="menu_settings">Settings</string>
    <string name="view_record_wav">录音WAV文件</string>
    <string name="view_record_amr">录音AMR文件</string>
    <string name="view_stop">停止录音</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="video">视频</string>
    <string name="audio">音频</string>
    <string name="doc">文档</string>
    <string name="no_app">无法打开，请安装相应的软件！</string>
    <string name="error_msg">错误信息</string>
    <string name="play_error_msg">播放异常!</string>
    <string name="invalid_msg">无效文件!</string>
    <string name="no_selected_answer">没有选择答案，请选择答案!</string>
    <string name="end_translate">翻译结束</string>
    <string name="start_record">开始录音</string>
    <string name="end_record">停止录音</string>
    <string name="input_seatno">请输入要呼叫的座位号</string>
    <string name="network_disconnect">没有网络,请连接网络</string>
    <string name="playback">回放</string>
    <string name="full">full</string>
    <string name="help">help</string>
    <string name="machine_cpu">处理器</string>
    <string name="machine_version">版本号</string>
    <string name="machine_memory">内存</string>
    <string name="machine_cpu_value">AML8726-MX(1.2GHzx2)</string>
    <string name="machine_version_value">Android 4.2.2</string>
    <string name="machine_memory_value">Memory 1GBytes/Flash 4GBytes</string>
    <string name="welcome_style_1">欢迎使用语音教学系统</string>
    <string name="open_file">正在打开文件...</string>
    <string name="teach_model">教学模式</string>
    <string name="group_model">分组讨论</string>
    <string name="exam_model">考试模式</string>
    <string name="study_model">自习模式</string>
    <string name="upload_url">http://192.168.1.5:8978/htdocs/receive.php</string>

</resources>