<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/test_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_answer_area" />

    <LinearLayout
        android:id="@+id/answer_layout"
        android:layout_width="400dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_title"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/answer" />

        <RadioGroup
            android:id="@+id/answer_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/check_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_a" />

            <RadioButton
                android:id="@+id/check_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_b" />

            <RadioButton
                android:id="@+id/check_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_c" />

            <RadioButton
                android:id="@+id/check_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_d" />
        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bring_answer" />
    </LinearLayout>

    <TextView
        android:id="@+id/test_over"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/test_over"
        android:visibility="gone" />

</RelativeLayout>