<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_cpu"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/machine_cpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                 android:textColor="@android:color/white"
                android:text="@string/machine_cpu_value"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_memory"
                 android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/machine_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                 android:textColor="@android:color/white"
                 android:text="@string/machine_memory_value"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
                android:text="@string/machine_version"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/machine_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
                 android:text="@string/machine_version_value"
                android:paddingLeft="30dp"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>