<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="260dp"
        android:background="@drawable/group_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/group_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/group_title"
            android:textColor="@color/style_3"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/group_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/group_order"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/group_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/group_member"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/teacher"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/teacher_bg"
            android:gravity="center"
            android:text="@string/teacher"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</LinearLayout>