<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/sub_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/medias_bg"
        android:paddingLeft="5dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/video_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/media_button"
            android:text="@string/video"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/audio_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/media_button"
            android:text="@string/audio"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/doc_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/media_button"
            android:text="@string/doc"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ListView
        android:id="@+id/file_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="100dp"
        android:layout_toRightOf="@+id/sub_layout"
        android:background="@android:color/white"
        android:listSelector="@drawable/list_item_selector"
        />

    <com.multimedia.room.fragment.AudioBarView
        android:id="@+id/audio_bar"
        android:layout_toRightOf="@+id/sub_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >
    </com.multimedia.room.fragment.AudioBarView>

</RelativeLayout>